# event-manager

./: .flake8  .gitignore  .pre-commit-config.yaml  .radonrc  Dockerfile  README.md  analyze_processes.py  capture.pcap  config.cfg  create_test_db.py  docker-compose.yml  index.html  otel-config.yaml  prometheus.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
benchmark/: Dockerfile.flask  aggregate_resources.py  benchmark_runner.py  build_lab5_report.py  collect_stats.sh  collect_stats_multi.sh  modes.json  plot_results.py  run_benchmark.sh
benchmark/flask_app/: app.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 1008d50f8eaed9f9.json  101b16768e0e369c.json  10241c2683bf614a.json  10245eb8944f1688.json  1028e45899cf1930.json  102ed93760a4613e.json  103102cfc91d29f3.json  103cb99381e0bccb.json  1040fea0af5679ce.json  1042762f553b9ada.json  10506fd03f99edeb.json  105a6ad1396c9fd5.json  105b312bbc7d3dbb.json  10696bf580822916.json  1094c348a5a7a197.json  109cbdce73c712bb.json  10a15a073328cc0c.json  10b1fa5056d0f097.json  10c96ea4494e4d90.json  10e22e95c618b2a2.json  10f84efaeefe031.json  10fd751c6cb65c59.json  1100e936f381e751.json  11137326b6ab766d.json  1119b326818204f3.json  1127d51bc97652b3.json  113c74323d4c3cc6.json  1148f87f7126dbec.json  115373c1770263d3.json  115e5c2051e706dd.json  115f3bfffa31b513.json  116d4f565dc66711.json  116e57b1a204148c.json  117166719b1ad1ba.json  11abb30a5ed9dc03.json  11b3125dd7a324bb.json  11bb4242c4eae488.json  11d51dac0a8b4bf5.json  11eb4a04d4b89938.json  11f8f8031282b3c3.json  (+5170 more)
db-init/: 01-init.sql  02-data.sql  03-migration.sql
docs/: external_service_contract.md
docs/_pdf_text/: ТИОПО, ЛР №7.txt  Тестирование и отладка, ЛР №1.txt  Тестирование и отладка, ЛР №2.txt  Тестирование и отладка, ЛР №3.txt  Тестирование и отладка, ЛР №4.txt  Тестирование и отладка, ЛР №5.txt  Тестирование и отладка, ЛР №6.txt
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
init_monodb/: create_mongodb.py
mock_server/: Dockerfile  external_service_mock.py  requirements.txt
results/: fastapi_1772187996_report.json  fastapi_1772189965_report.json  fastapi_1772193136_report.json  fastapi_1772195180_report.json  fastapi_1772197754_latencies.csv  fastapi_1772197754_report.json  fastapi_1772198453_report.json  fastapi_1772198453_resources.json  fastapi_1772198757_latencies.csv  fastapi_1772198757_report.json  fastapi_1772199086_report.json  fastapi_1772389499_latencies.csv  fastapi_1772389499_report.json  fastapi_1772390465_latencies.csv  fastapi_1772390465_report.json  flask_1772200445_report.json  flask_1772202247_report.json  flask_1772389809_latencies.csv  flask_1772389809_report.json  flask_1772389809_resources.json  flask_resources.csv  flask_resources_report.json  generate.py  no_tracing_debug_logs.csv  no_tracing_default_logs.csv  no_tracing_info_resources.csv  no_tracing_info_resources_report.json  report.txt  tracing_debug_logs.csv  tracing_default_logs.csv  tracing_info_resources.csv  tracing_info_resources_full.csv  tracing_info_resources_full_report.json  tracing_info_resources_report.json
src/: logger.py  main.py  service_locator.py  settings.py  tracing.py
src/abstract_repository/: iactivity_repository.py  ievent_repository.py  ilodging_repository.py  iprogram_repository.py  isession_repository.py  iuser_repository.py  ivenue_repository.py
src/abstract_service/: activity_service.py  event_service.py  lodging_service.py  program_service.py  session_service.py  user_service.py  venue_service.py
src/controllers/: activity_controller.py  event_controller.py  lodging_controller.py  program_controller.py  session_controller.py  user_controller.py  venue_controller.py
src/models/: activity.py  event.py  lodging.py  program.py  session.py  user.py  venue.py
src/repository/: accommodation_repository.py  activity_repository.py  city_repository.py  directory_route_repository.py  entertainment_repository.py  event_repository.py  lodging_repository.py  program_repository.py  route_repository.py  session_repository.py  travel_repository.py  user_repository.py  venue_repository.py
src/repository_mongodb/: activity_repository.py  event_repository.py  lodging_repository.py  program_repository.py  session_repository.py  user_repository.py  venue_repository.py
src/routers/: activity.py  event.py  external_service.py  lodging.py  program.py  session.py  user.py  venue.py
src/services/: activity_service.py  event_service.py  external_todo_service.py  lodging_service.py  program_service.py  session_service.py  user_service.py  venue_service.py
templates/: activity.html  edit.html  event.html  lodging.html  login.html  main.html  new.html  profile.html  profile_user.html  program.html  program_catalog.html  recommended.html  register.html  session.html  tours.html  user.html  venue.html
tests/: builders.py  conftest.py
tests/e2e/: test_add_venue_e2e.py  test_external_service_lab7_e2e.py  test_mvp_event_flow_e2e.py
tests/features/: authentication.feature  login_limit.feature  password_rotation.feature  recovery.feature
tests/integration/activity_serv/: test_add_activity_it.py  test_add_existen_activity_it.py  test_delete_activity_it.py  test_delete_non_existen_activity_it.py  test_get_by_id_activity_it.py  test_get_by_id_non_existen_activity_it.py  test_get_empty_list_activity_it.py  (+3 more)
tests/steps/: test_auth_steps.py  test_login_limit_steps.py  test_password_rotation_steps.py  test_recovery_steps.py
tests/unit/: test_builders.py  test_m_activity_service.py  test_m_event_service.py  test_m_lodging_service.py  test_m_program_service.py  test_m_session_service.py  test_m_user_service.py  test_m_venue_service.py
tests/utils/: api_helpers.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+76 files in other folders)
